--- a/css/main.css
+++ b/css/main.css
@@ -76,13 +76,7 @@ img {
 
 @media screen and (min-width: 768px) {
   .backdrop {
-    padding: 208px 159px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .backdrop {
-    padding: 221px 0;
+    padding: 0;
   }
 }
 
@@ -115,6 +109,15 @@ img {
 .modal .close:hover .close-black,
 .modal .close:focus .close-black {
   fill: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 
 @media screen and (min-width: 1200px) {
