--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -12,12 +12,6 @@
 
 @media screen and (min-width: 768px) {
   .backdrop {
-    padding: 208px 159px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .backdrop {
-    padding: 221px 0;
+    padding: 0;
   }
 }
