--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -33,6 +33,15 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .modal {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .modal {
     width: 528px;
