--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -220,6 +220,7 @@ img {
 
 .mobile-nav {
   display: none;
+  z-index: 1;
   position: absolute;
   padding: 60px 0;
   top: 100%;
@@ -573,6 +574,7 @@ img {
   }
   .social-footer {
     margin-bottom: 0;
+    text-align: start;
   }
   .address {
     margin-bottom: 0;
@@ -622,7 +624,6 @@ img {
   width: 450px;
   overflow: hidden;
   border: 1px solid #eeeeee;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
