--- a/css/main.css
+++ b/css/main.css
@@ -351,7 +351,7 @@ img {
   border-bottom: 1px solid #ececec;
 }
 
-.main-nav {
+.mobile-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
