--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -158,7 +158,7 @@ img {
   border-bottom: 1px solid #ececec;
 }
 
-.main-nav {
+.mobile-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
