--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -5,7 +5,7 @@
   border-bottom: 1px solid #ececec;
 }
 
-.main-nav {
+.mobile-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
