--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -26,6 +26,8 @@ body {
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
 }
 
 .list {
@@ -35,8 +37,8 @@ img {
 }
 
 .container {
-  width: 100%;
   padding: 0 15px;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 480px) {
@@ -154,7 +156,7 @@ img {
 .header {
   position: relative;
   padding: 16px 0;
-  min-width: 480px;
+  width: 100%;
   border-bottom: 1px solid #ececec;
 }
 
@@ -394,7 +396,6 @@ img {
 }
 
 .footer {
-  min-width: 480px;
   padding: 60px 0;
   background-color: #2f303a;
 }
@@ -486,8 +487,7 @@ img {
 
 .inside-text {
   display: block;
-  width: 450px;
-  height: 50px;
+  width: 100%;
   padding: 15px 16px;
   margin: 0 auto 20px auto;
   font-weight: normal;
@@ -537,6 +537,9 @@ img {
   }
   .footer-block {
     margin: 0;
+  }
+  .inside-text {
+    width: 450px;
   }
 }
 
@@ -616,12 +619,11 @@ img {
 
 .portfolio {
   padding: 60px 0;
-  min-width: 480px;
 }
 
 .projects-list-item {
   position: relative;
-  width: 450px;
+  max-width: 450px;
   overflow: hidden;
   border: 1px solid #eeeeee;
   transition-duration: 250ms;
