--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,8 +3,8 @@
   padding: 40px;
   margin: 0 auto;
 
-  width: 450px;
-  min-height: 609px;
+  max-width: 450px;
+  // min-height: 609px;
 
   background: $white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
