--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,5 +1,4 @@
 .team {
-  min-width: 480px;
   padding: 60px 0;
   background-color: #f5f4fa;
 
@@ -42,17 +41,22 @@
 
 .cards {
   padding-bottom: 24px;
-  min-height: 622px;
+  max-width: 450px;
 
   background-color: $white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
-.cards:not(:last-child) {
-  margin-bottom: 30px;
-}
+// .photo-employee {
+//   max-width: 450px;
+//   height: 320px;
+// }
 
 @media screen and (min-width: 768px) {
   .team-list {
@@ -61,7 +65,6 @@
     flex-wrap: wrap;
 
     .cards {
-      min-height: 536px;
       margin: 15px;
       width: calc((100% - 4 * 15px) / 2);
     }
@@ -83,10 +86,6 @@
 
     &-list {
       flex-wrap: nowrap;
-    }
-
-    .cards {
-      min-height: 428px;
     }
   }
 }
