--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ img {
   position: relative;
   padding: 40px;
   margin: 0 auto;
-  max-width: 450px;
+  width: 100%;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -116,6 +116,7 @@ img {
 @media screen and (min-width: 768px) {
   .modal {
     position: absolute;
+    width: 450px;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
