--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,8 +3,7 @@
   padding: 40px;
   margin: 0 auto;
 
-  max-width: 450px;
-  // min-height: 609px;
+  width: 100%;
 
   background: $white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -36,6 +35,7 @@
 @media screen and (min-width: 768px) {
   .modal {
     position: absolute;
+    width: 450px;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
